--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -1,5 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <!--mSignal Custom Dimensions-->
+    <dimen name="conversation_item_received_bubble_padding">16dp</dimen>
+    <dimen name="conversation_item_received_text_left_padding">8dp</dimen>
+    <dimen name="conversation_item_received_text_right_padding">4dp</dimen>
+    <dimen name="conversation_item_received_text_bottom_padding">0dp</dimen>
+
+    <dimen name="conversation_item_sent_bubble_padding">16dp</dimen>
+    <dimen name="conversation_item_sent_text_left_padding">4dp</dimen>
+    <dimen name="conversation_item_sent_text_right_padding">8dp</dimen>
+    <dimen name="conversation_item_sent_text_bottom_padding">4dp</dimen>
+
     <dimen name="emoji_drawer_size">32sp</dimen>
     <dimen name="min_keyboard_size">50dp</dimen>
     <dimen name="default_custom_keyboard_size">220dp</dimen>
@@ -63,4 +75,5 @@
     <dimen name="onboarding_watermark_size">140dp</dimen>
     <dimen name="onboarding_title_size">34sp</dimen>
     <dimen name="onboarding_subtitle_size">20sp</dimen>
+
 </resources>
